--- a/FuelLogger/FuelLogger/Pages/DistanceCalculator.xaml
+++ b/FuelLogger/FuelLogger/Pages/DistanceCalculator.xaml
@@ -2,5 +2,51 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="FuelLogger.Pages.DistanceCalculator">
-  <Label Text="{Binding MainText}" VerticalOptions="Center" HorizontalOptions="Center" />
+  <AbsoluteLayout HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand">
+    <StackLayout Orientation="Vertical">
+      <Grid Padding="10">
+        <Grid.RowDefinitions>
+          <RowDefinition  Height="*"/>
+          <RowDefinition  Height="*"/>
+          <RowDefinition  Height="*"/>
+
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+          <ColumnDefinition Width="1.5*" />
+          <ColumnDefinition Width="3*" />
+          <ColumnDefinition Width="*" />
+        </Grid.ColumnDefinitions>
+
+        <Label Grid.Row="0" Grid.Column="0" Text="Distance :" FontSize="16" />
+        <Label Grid.Row="1" Grid.Column="0" Text="Fuel price :" FontSize="16" />
+        <Label Grid.Row="2" Grid.Column="0" Text="Fuel efficiency :" FontSize="16" />
+        <Entry  Text="{Binding TotalPrice}" Grid.Row="0" Grid.Column="1" HorizontalOptions="FillAndExpand" HorizontalTextAlignment="Start" Placeholder="Total price in EUR" Keyboard="Numeric" />
+        <Entry x:Name="txtPrice" Text="{Binding Price}" Grid.Row="1" Grid.Column="1" HorizontalOptions="FillAndExpand" HorizontalTextAlignment="Start" Placeholder="Fuel price" Keyboard="Numeric" />
+        <Entry x:Name="txtEff" Text="{Binding Efficiency}" Grid.Row="2" Grid.Column="1" HorizontalOptions="FillAndExpand" HorizontalTextAlignment="Start" Placeholder="Fuel efficiency" Keyboard="Numeric" />
+        <Label Grid.Row="0" Grid.Column="2" Text="EUR" FontSize="16" />
+        <Label Grid.Row="1" Grid.Column="2" Text="EUR" FontSize="16" />
+        <Label Grid.Row="2" Grid.Column="2" Text="l/100km" FontSize="16" />
+
+      </Grid>
+      <Grid>
+        <Grid.ColumnDefinitions>
+          <ColumnDefinition Width="*" />
+          <ColumnDefinition Width="*" />
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+          <RowDefinition Height="*" />
+          <RowDefinition Height="*" />
+        </Grid.RowDefinitions>
+        <Button x:Name="btnReset" Grid.Column="0" Grid.Row="0" Text="Reset" Command="{Binding ResetDistanceCommand}" />
+        <Button x:Name="btnCalculate" Grid.Column="1" Grid.Row="0" Text="Calculate" Command="{Binding CalculateDistanceCommand}"/>
+
+      </Grid>
+      <Grid>
+
+
+        <Label Text="{Binding DistanceResult}"  HorizontalOptions="Center" VerticalOptions="Center" FontSize="37"/>
+
+      </Grid>
+    </StackLayout>
+  </AbsoluteLayout>
 </ContentPage>
